crates/legacy_ide/src/snapshots/legacy_ide__folding_range__tests__folding_section_comments.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# Section ----\na\n\nb\nc\n\n# Section ----\nd\n\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 7,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
