crates/legacy_ide/src/snapshots/legacy_ide__folding_range__tests__folding_section_comments_no_trailing_empty_line.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# First section ----\na\nb\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 3,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
