crates/legacy_ide/src/snapshots/legacy_ide__folding_range__tests__folding_unterminated.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "format!(\"Expected error: {}\", e)"
---
"Expected error: Parse error"
